--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "jshint": "^2.10.2",
     "morgan": "~1.9.1",
     "oracledb": "^3.1.2"
   }
